# specinfo

./: Makefile.in  README.rst  configure  configure.in  test.spec
include/: config.h.in  specinfo.h
src/: specinfo.c
