#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AC_CONFIG_SRCDIR([src/specinfo.c])
AC_CONFIG_HEADER([include/config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lrpm':
AC_CHECK_LIB([rpm], [main])
# FIXME: Replace `main' with a function in `-lrpmbuild':
AC_CHECK_LIB([rpmbuild], [main])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS_ONCE([dirent.h ndir.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_STAT
AC_CHECK_FUNCS([getcwd])
AC_CHECK_DECL([struct Spec], [],
    AC_DEFINE_UNQUOTED([RPMSPEC], [], [No struct Spec, use rpmSpec]))

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
